Shift the styling around to fix layout issues
The app html needs to be set to 100%, but the margin of 0 needs to be applied to the body itself. To get it to work, I'll move the .site class down into the app component for now.

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,16 +1,9 @@
 html, body {
-  height: 100%;
   margin: 0;
 }
 
 body {
   color: #222;
-}
-
-.site {
-  display: flex;
-  flex-direction: column;
-  font-family: 'Open Sans', sans-serif;
 }
 
 a {
