--- a/source/app.component.css
+++ b/source/app.component.css
@@ -1,3 +1,10 @@
+.site {
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	font-family: 'Open Sans', sans-serif;
+}
+
 main {
 	flex: 1;
 	width: 1200px;
